--- a/package/python-uvicorn/Config.in
+++ b/package/python-uvicorn/Config.in
@@ -1,7 +1,8 @@
 config BR2_PACKAGE_PYTHON_UVICORN
 	bool "python-uvicorn"
 	select BR2_PACKAGE_PYTHON_CLICK # runtime
-	select BR2_PACKAGE_PYTHON_H11 # runtime
+	select BR2_PACKAGE_PYTHON_HTTPTOOLS # runtime
+	select BR2_PACKAGE_PYTHON3_ZLIB # runtime
 	help
 	  The lightning-fast ASGI server.
 
